2008/06/12	kwsPlus release 1.4.1
	
	37. UnitTesting is now compiled on demand configure --enable-unitTesting.
	36. Added diffusion shooter factory.
	35. Added diffusion node picker factory.
	
2008/05/13	kwsPlus release 1.4
	
	34. Added distance function factory.
        33. Added some debugging code in flicDistance.cpp and flicDistance.h.
        32. Corrected some warning and removed useless KWSPRECOND() in
            flicDirectPath.cpp.
        31. Adaptation to KPP version 2.04.500.

2008/04/24      kwsPlus release 1.3.2

        36. Fix more memory leaks in flicDistance.

2008/04/24      kwsPlus release 1.3.1

        35. Fix memory leak in flicDistance.
        34. correct a bug in kitMat3.h : disable multiple inclusion
        33. If CXXFLAGS and CFLAGS are not defined at configuration, they
            are set to "-Wall".
        32. Removed unitTesting program to test projection constraint.
        30. Correction of numerous warnings in documentation generation.

2008/04/04      kwsPlus release 1.3

        29. Added steering method factories.
        28. Added class CflicDistance that provides an approximation of
            the length of flic direct path between two configurations.
        27. Moved static functions of flicDirectPath.cpp into a class
            CflicManager in order to use these functions in other files.
        26. Added CkwsPlusDistance class. Enable user to use other types
            of steering method for calculating distance.
        25. Added CkwsPlusRoadmap class. Enable user to remove a set of
            nodes and a set of edges from a roadmap.

2008/02/18      kwsPlus release 1.2
	
        24. In flicDirectPath, curvature bound is enforced at the creation
            of the direct path.
        23. Added CkwsPlusLTRdmBuilder class. Derives from any diffusing
            roadmap builder class and implements a local tree diffusing
            method.
        22. Added CkwsPlusPCARdmBuilder class. Derives from any diffusing