@@ -65,7 +65,7 @@ roadmap with RLG.
 
 \defgroup PCA PCA Roadmap Builder
 
-\defgroup kwsPlusRoadmap Enhanced roadmap management
+\defgroup kwsPlusEnhancedRoadmapManagement Enhanced roadmap management
 
 */
 
